# auth0-bff-example

backend/: Makefile  pyproject.toml  run_dev.sh
backend/app/: main.py
backend/app/api/: catalog.py  user.py
backend/app/core/: jwt_bearer.py
backend/app/models/: auth.py  catalog.py  settings.py  user.py
backend/app/routes/: catalog.py  users.py
backend/app/services/: auth.py  catalog.py  user.py
bff/: Makefile  main.py  pyproject.toml  run_dev.sh
bff/app/: main.py
bff/app/api/: auth.py
bff/app/core/: cache.py  http_client.py  security.py
bff/app/models/: auth.py  settings.py
bff/app/routes/: auth.py  catalog.py  users.py
bff/app/services/: authentication.py  backend.py  encryption.py  tokens.py
